# wikipub

./: .gitignore  README.md  example.toml  pyproject.toml  wikipub.py
