[tool.poetry]
name = "wikipub"
version = "0.1.0"
description = "Wikipedia to ePub"
authors = ["Aaron Kehrer <akehrer@gmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
ebooklib = "^0.17.1"
wikipedia-api = "^0.5.4"
toml = "^0.10.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
